RESOLVED FIXED16542
[GTK] Text is missing with old Pango version
https://bugs.webkit.org/show_bug.cgi?id=16542
Summary [GTK] Text is missing with old Pango version
Tomas Rimkus
Reported 2007-12-20 14:02:25 PST
With webkit-gtk r28880 and later text is missing in all web pages. Using pango 1.16.2 . Here is a screenshot: http://img171.imageshack.us/img171/769/webkitgooglefd3.png
Attachments
Alp Toker
Comment 1 2007-12-20 16:34:53 PST
Commits r28880, r28876, r28865, r28864 causing this regression were backed out in r28921. Please re-open this bug if the issue persists.
Note You need to log in before you can comment on or make changes to this bug.