2007-12-20  Alp Toker  <alp@atoker.com>

Rubber-stamped by Maciej.

        http://bugs.webkit.org/show_bug.cgi?id=16542
        [GTK] Text is missing with old Pango version

        Back out commits r28880, r28876, r28865, r28864 which added Pango font
        selection support. These changes caused a regression where no text was
        displayed with older Pango versions.


Canonical link: https://commits.webkit.org/22762@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@28921 268f45cc-cd09-0410-ab3c-d52691b4dbfc