third_party/WebKit/WebCore/platform/graphics/gtk/FontCacheGtk.cpp
@@ -65,7 +65,7 @@ FontPlatformData* FontCache::getLastResortFallbackFont(const FontDescription& fo
 bool FontCache::fontExists(const FontDescription& fontDescription, const AtomicString& family)
 {
     FontPlatformData platformData(fontDescription, family);
-    return platformData.m_font != 0;
+    return platformData.m_pattern != 0;
 }
 
 FontPlatformData* FontCache::createFontPlatformData(const FontDescription& fontDescription, const AtomicString& family)
