third_party/WebKit/WebCore/platform/graphics/gtk/GlyphPageTreeNodeGtk.cpp
@@ -3,7 +3,6 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  * Copyright (C) 2006, 2007 Apple Inc. All rights reserved.
  * Copyright (C) 2006 Michael Emmel mike.emmel@gmail.com 
  * Copyright (C) 2007 Alp Toker <alp.toker@collabora.co.uk>
- * Copyright (C) 2007 Pioneer Research Center USA, Inc.
  *
  * Redistribution and use in source and binary forms, with or without
  * modification, are permitted provided that the following conditions
@@ -34,38 +33,8 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include "GlyphPageTreeNode.h"
 
 #include "FontData.h"
-#include <pango/pango-font.h>
 
 namespace WebCore {
-
-static PangoGlyph pango_font_get_glyph(PangoFont* font, PangoContext* context, gunichar wc)
-{
-    PangoGlyph result = 0;
-    gchar buffer[7];
-
-    gint  length = g_unichar_to_utf8(wc, buffer);
-    g_return_val_if_fail(length, 0);
-
-    GList* items = pango_itemize(context, buffer, 0, length, NULL, NULL);
-
-    if (g_list_length(items) == 1) {
-        PangoGlyphString* glyphs = pango_glyph_string_new();
-
-        pango_shape(buffer, length, &((PangoItem*)items->data)->analysis, glyphs);
-
-        if (glyphs->num_glyphs == 1)
-            result = glyphs->glyphs[0].glyph;
-        else
-            g_warning("didn't get 1 glyph but %d", glyphs->num_glyphs);
-
-        pango_glyph_string_free(glyphs);
-    }
-
-    g_list_foreach(items, (GFunc)pango_item_free, NULL);
-    g_list_free(items);
-
-    return result;
-}
 
 bool GlyphPage::fill(UChar* buffer, unsigned bufferLength, const FontData* fontData)
 {
@@ -74,12 +43,13 @@ bool GlyphPage::fill(UChar* buffer, unsigned bufferLength, const FontData* fontD
     if (bufferLength > GlyphPage::size)
         return false;
 
-    if (!fontData->m_font.m_font || fontData->m_font.m_font == reinterpret_cast<PangoFont*>(-1))
+    FT_Face face = cairo_ft_scaled_font_lock_face(fontData->m_font.m_scaledFont);
+    if (!face)
         return false;
 
     bool haveGlyphs = false;
     for (unsigned i = 0; i < GlyphPage::size; i++) {
-        Glyph glyph = pango_font_get_glyph(fontData->m_font.m_font, fontData->m_font.m_context, buffer[i]);
+        Glyph glyph = FcFreeTypeCharIndex(face, buffer[i]);
         if (!glyph)
             setGlyphDataForIndex(i, 0, 0);
         else {
@@ -87,6 +57,8 @@ bool GlyphPage::fill(UChar* buffer, unsigned bufferLength, const FontData* fontD
             haveGlyphs = true;
         }
     }
+
+    cairo_ft_scaled_font_unlock_face(fontData->m_font.m_scaledFont);
 
     return haveGlyphs;
 }
